<resources>
    <string name="app_name">Farmácia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aplicativo Farmácia</string>
    <string name="nav_header_subtitle">cassioseffrin@github.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_customer">Cliente</string>
    <string name="menu_employe">Funcionario</string>
    <string name="menu_product">Produto</string>
    <string name="menu_order">Pedido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="invalid_name">Nome nao pode ser em branco</string>
    <string name="invalid_cpf">somente numeros</string>
    <string name="invalid_endereco">nao pode ser em branco</string>
    <string name="invalid_rg">somente numeros</string>
    <string name="invalid_fone">digite um telefone válido</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>